hw-05-monitoring/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw05
  labels:
    app: hw05-monitoring
