hw-05-monitoring/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw05-monitoring
  namespace: hw05
  labels:
    app: hw05-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw05-monitoring
  template:
    metadata:
      labels:
        app: hw05-monitoring
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: hw05-monitoring
          image: tobantal/hw05-monitoring:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
