hw-05-monitoring/k8s/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-hw05
  namespace: hw05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-hw05
  template:
    metadata:
      labels:
        app: postgres-hw05
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-sql
          configMap:
            name: postgres-init

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-hw05
  namespace: hw05
spec:
  selector:
    app: postgres-hw05
  ports:
    - port: 5432
      targetPort: 5432
